compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__zero_arity_imported_typscript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 49
expression: "import other\npub fn main() {\n  other.Two\n}"
snapshot_kind: text
---
----- SOURCE CODE
import other
pub fn main() {
  other.Two
}

----- TYPESCRIPT DEFINITIONS
import type * as $other from "../other.d.mts";

export function main(): $other.One$;
