compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__zero_arity_imported_unqualified.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 60
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other.{Two}
pub fn main() {
  Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return new Two();
}
