compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__zero_arity_imported_unqualified_aliased.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 82
expression: "import other.{Two as Three}\npub fn main() {\n  Three\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other.{Two as Three}
pub fn main() {
  Three
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two as Three } from "../other.mjs";

export function main() {
  return new Three();
}
