compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__zero_arity_imported_unqualified_aliased_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 93
expression: "import other.{Two as Three}\npub fn main() {\n  Three\n}"
snapshot_kind: text
---
----- SOURCE CODE
import other.{Two as Three}
pub fn main() {
  Three
}

----- TYPESCRIPT DEFINITIONS
import type * as $other from "../other.d.mts";

export function main(): $other.One$;
